--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -10,7 +10,7 @@
           <h5>Informations générales</h5>
           <p>Pickalgo utilisera ces informations afin de vous contacter</p>
         </div>
-        <div class="form-part info-bloc">
+        <div class="right-part info-bloc">
           <div class="form-inputs">
             <div class="input-and-icon">
               <%= f.input :brand, label: false, placeholder:'Marque ou raison sociale' %>
@@ -36,7 +36,7 @@
           <h5>Social & bio</h5>
           <p>Informations que pourront consulter les utilisateurs Pickalgo à propos de votre marque ou service. Ajoutez les liens vers vos pages sur les réseaux sociaux ou vous êtes présents.</p>
         </div>
-        <div class="form-part info-bloc">
+        <div class="right-part info-bloc">
         <div class="form-inputs">
           <div class="input-and-icon">
             <%= f.input :facebook, label: false, placeholder:'Votre page facebook' %>
@@ -56,7 +56,7 @@
           </div>
           <div class="input-and-icon">
             <%= f.input :bio, label: false, placeholder: 'Mini-bio: Décrivez votre marque ou service en quelques mots' %>
-            <span class="icon fab fa-twitter"></span>
+            <span class="icon fas fa-pen-fancy"></span
           </div>
         </div>
         </div>
