--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -202,23 +202,12 @@
     margin: 0 auto;
   }
 
+
+
   .testimony-box, .how-it-works {
     width: 80%;
     padding: 80px 0;
     margin: 0 auto;
-
-
-    .cta {
-      margin: 0 auto;
-      width: 35%;
-      .btn-orange {
-        font-size: 20px;
-        text-transform: uppercase;
-        padding: 10px 30px;
-      }
-    }
-
-
 
     .testimonies{
       margin: 80px 0;
@@ -226,6 +215,16 @@
       flex-wrap: wrap;
       justify-content: space-between;
     }
+
+    a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+      .btn-orange {
+        display: inline-block;
+      }
 
     .testimony{
       flex: 0 0 30%;
