edit and new style ok

--- a/app/assets/stylesheets/components/_attachinary.scss
+++ b/app/assets/stylesheets/components/_attachinary.scss
@@ -3,8 +3,9 @@
 
   .picture-upload {
     position: relative;
+    margin: 30px 30px 30px 0;
     img {
-      border-radius: 10px;
+      border-radius: 2px;
     }
 
     a {
