--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,7 +14,7 @@
          <% end %>
       </div>
       <% if @products.present? %>
-      <div class="right-part">
+      <div class="right-part info-bloc">
         <%= render @products %>
       <% else %>
         <p>No products</p>
