save style of product

--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -1,10 +1,11 @@
 .products-container {
   display: flex;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .product-iterration {
-  flex: 0 0 59%;
+  flex: 0 0 55%;
 }
 
 .product-card {
