--- a/app/assets/stylesheets/pros/_show.scss
+++ b/app/assets/stylesheets/pros/_show.scss
@@ -67,7 +67,7 @@
   }
 
   #save-cta, #password-cta {
-    margin: 0 0 0 auto;
+    margin: 20px 0 0 auto;
   }
 
   #new_user {
@@ -95,12 +95,16 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  align-items: flex-start;
   margin-bottom: 30px;
 }
 
 .text-part {
   flex: 0 0 40%;
-  padding: 30px 20px;
+  background-color: #FFF;
+  border: 1px solid rgba(0, 0, 0, 0.0625);
+  padding: 20px;
+  margin-right: 1%;
 
   a {
     display: inline-block;
@@ -114,7 +118,6 @@
 
 .right-part {
   flex: 0 0 59%;
-  min-height: calc(100vh - 130px);
 }
 
 
@@ -146,7 +149,7 @@
     }
 
     #save-cta, #password-cta {
-      margin: 0 10px 0 auto;
+      margin: 10px 10px 0 auto;
     }
   }
 
