--- a/app/views/pages/pros.html.erb
+++ b/app/views/pages/pros.html.erb
@@ -42,14 +42,14 @@
         <div class="test-type">
           <h5 class="test-title">A/B Test</h5>
           <p>Vous hésitez entre plusieurs prix pour votre promo. Lequel serait le plus efficient ? Nous présentons vos prix de façon alternative à chaque participant à la campagne de test pour le déterminer.</p>
-          <%= link_to root_path do %>
+          <%= link_to more_infos_path do %>
             <div class="btn more-infos">En savoir plus</div>
           <% end %>
         </div>
         <div class="test-type">
           <h5 class="test-title">Test ouvert</h5>
           <p>Les testeurs intéressés nous communiquent le prix maximal qu'ils sont prêts à payer pour votre produit.</p>
-          <%= link_to root_path do %>
+          <%= link_to more_infos_path do %>
             <div class="btn more-infos">En savoir plus</div>
           <% end %>
         </div>
