--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -216,15 +216,17 @@
       justify-content: space-between;
     }
 
-    a {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-      .btn-orange {
-        display: inline-block;
+    .shorten {
+      a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
+
+        .btn-orange {
+          display: inline-block;
+        }
+    }
 
     .testimony{
       flex: 0 0 30%;
