--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -8,13 +8,27 @@
   flex: 0 0 55%;
 }
 
+.campaign-link {
+  display: flex;
+  justify-content: flex-end;
+  padding: 15px;
+  margin-bottom: 40px;
+  background-color: #f1f8fc;
+  border: 1px solid rgba(0, 0, 0, 0.0625);
+  border-bottom-right-radius: 2px;
+  border-bottom-left-radius: 2px;
+}
+
 .product-card {
   display: flex;
   padding: 15px;
-  border: 1px solid rgba(0, 0, 0, 0.0625);
-  border-radius: 2px;
+  border-top-right-radius: 2px;
+  border-top-left-radius: 2px;
+  border-right: 1px solid rgba(0, 0, 0, 0.0625);
+  border-left: 1px solid rgba(0, 0, 0, 0.0625);
+  border-top: 1px solid rgba(0, 0, 0, 0.0625);
   background-color: #FFFFFF;
-  margin-bottom: 15px;
+
 
   h3 {
     font-weight: bold;
@@ -43,17 +57,7 @@
   }
 }
 
-.product-category {
-  display: flex;
-  p {
-    border: 1px solid #e8e8e8;
-    color: white;
-    border-radius: 3px;
-    padding: 0 10px 0 10px;
-    background-color: #32B796;
-    margin: 0;
-  }
-}
+
 
 .edit-links {
   margin-left: 15px;
