--- a/app/assets/stylesheets/campaigns/index.scss
+++ b/app/assets/stylesheets/campaigns/index.scss
@@ -1,5 +1,10 @@
 .explain-block {
   margin-bottom: 30px;
+  h3 {
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-size: 20px;
+  }
 }
 
 .test-type-inputs {
