--- a/app/assets/stylesheets/campaigns/index.scss
+++ b/app/assets/stylesheets/campaigns/index.scss
@@ -32,3 +32,19 @@
     flex: 0 0 30%;
   }
 }
+
+th {
+  text-align: left;
+  background: #eceff2;
+  padding: 5px 10px;
+  border: 1px solid lightgray;
+}
+
+td {
+  text-align: left;
+  background: #FFFFFF;
+  padding: 5px 10px;
+  border: 1px solid rgba(0, 0, 0, 0.0625);
+}
+
+
