--- a/app/views/pros/_dashboard-navigation.html.erb
+++ b/app/views/pros/_dashboard-navigation.html.erb
@@ -8,7 +8,9 @@
   <%= link_to edit_pro_path(@pro) do %>
     <div class="link <%= 'selected-category' if @page == 'edit'  %>"><i class="fas fa-lock"></i> Sécurité</div>
   <% end %>
-  <div class="link"><i class="fas fa-flask"></i> Campagnes</div>
+  <%= link_to my_campaigns_pro_path(@pro) do %>
+    <div class="link"><i class="fas fa-flask"></i> Campagnes</div>
+  <% end %>
   <div class="link"><i class="fas fa-question-circle"></i> Aide</div>
   <div class="link"><i class="fas fa-envelope"></i> Nous contacter</div>
   <%= link_to destroy_pro_session_path, method: :delete do %>
