--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -41,6 +41,10 @@
   }
 }
 
+.product-card:last-child {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.0625);
+}
+
 
 .recap-image {
   border-radius: 3px;
