--- a/app/assets/stylesheets/testor/index.scss
+++ b/app/assets/stylesheets/testor/index.scss
@@ -29,3 +29,129 @@
   flex: 0 0 24%;
   margin-left: 5%;
 }
+
+.filter-header {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 15px;
+
+  p {
+    margin: 0;
+    font-size: 14px;
+    font-style: italic;
+    font-weight: bold;
+  }
+}
+
+
+.fa-toggle-on {
+  color: $blue;
+  font-size: 20px;
+  padding-right: 3px;
+}
+
+.sub-title {
+  display: flex;
+  align-items: center;
+  font-size: 13px;
+  transition: all 0.1s;
+  padding: 3px 10px 3px 10px;
+  margin-bottom: 2px;
+  border-radius: 25px;
+  color: #4d4d5e;
+
+
+    &:hover {
+      background-color: #F1F3F4;
+      padding: 3px 10px 3px 10px;
+      margin-bottom: 2px;
+    }
+  a {
+    text-decoration: none;
+  }
+  p {
+    margin: 0;
+    color: inherit;
+  }
+}
+
+.categories-icon {
+      height: 25px;
+      margin-right: 15px;
+      border-radius: 3px;
+
+}
+
+.product-category{
+  display: flex;
+  text-transform: uppercase;
+  p {
+    margin: 0;
+  }
+
+  .sport {
+    border: 1px solid #e8e8e8;
+    color: white;
+    border-radius: 3px;
+    padding: 0 10px 0 10px;
+    background-color: $red;
+  }
+
+  .enfants {
+    border: 1px solid #e8e8e8;
+    color: white;
+    border-radius: 3px;
+    padding: 0 10px 0 10px;
+    background-color: $orange;
+  }
+
+  .animaux {
+    border: 1px solid #e8e8e8;
+    color: white;
+    border-radius: 3px;
+    padding: 0 10px 0 10px;
+    background-color: $green;
+  }
+
+  .mode {
+    border: 1px solid #e8e8e8;
+    color: white;
+    border-radius: 3px;
+    padding: 0 10px 0 10px;
+    background-color: $anis;
+  }
+
+  .beaute {
+    border: 1px solid #e8e8e8;
+    color: white;
+    border-radius: 3px;
+    padding: 0 10px 0 10px;
+    background-color: $blueworld;
+  }
+
+  .loisirs {
+    border: 1px solid #e8e8e8;
+    color: white;
+    border-radius: 3px;
+    padding: 0 10px 0 10px;
+    background-color: purple;
+  }
+
+  .maison {
+    border: 1px solid #e8e8e8;
+    color: white;
+    border-radius: 3px;
+    padding: 0 10px 0 10px;
+    background-color: #4c4c03;
+  }
+
+  .tech {
+    border: 1px solid #e8e8e8;
+    color: white;
+    border-radius: 3px;
+    padding: 0 10px 0 10px;
+    background-color: $darkgray;
+  }
+
+}
+
