--- a/app/assets/stylesheets/pages/_right.scss
+++ b/app/assets/stylesheets/pages/_right.scss
@@ -16,7 +16,6 @@
   padding: 15px;
   border-radius: 2px;
   color: #4d4d5e;
-  margin-bottom: 30px;
 
   a {
     display: flex;
@@ -33,7 +32,7 @@
 
 .encart-element {
   color: #4d4d5e;
-  margin-bottom: 30px;
+  margin-top: 50px;
 
   .gray-logo {
     height: 30px;
