removed namespace, able to access campaigns from same controller for both pro and user

--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -7,7 +7,7 @@
           <div class="filter-header">
           <% if @filter %>
              <p class="filter-before">DEFILTRER</p>
-             <%= link_to testor_campaigns_path do %>
+             <%= link_to campaigns_path do %>
               <i class="fa fa-toggle-on" aria-hidden="true"></i>
              <% end %>
             <% else %>
@@ -27,4 +27,3 @@
 
   </div>
 </div>
-
