--- a/app/views/campaigns/_campaign.html.erb
+++ b/app/views/campaigns/_campaign.html.erb
@@ -1,5 +1,5 @@
 
-<%= link_to testor_campaign_path(campaign.id) do %>
+<%= link_to campaign_path(campaign) do %>
   <div class="product-card">
     <%= cl_image_tag("#{campaign.product.photos.first.path}", :width=>110, :height=>110, :crop=>"fill", class: "recap-image")%>
     <div class="recap-body">
