--- a/app/views/shared/_categories.html.erb
+++ b/app/views/shared/_categories.html.erb
@@ -1,5 +1,5 @@
 <% @categories.each do |category| %>
-  <%= link_to testor_campaigns_path(category: category) do %>
+  <%= link_to campaigns_path(category: category) do %>
       <div class="sub-title <%=category.id%> <%='inactive' if category == @filter %>">
         <%= image_tag "#{category.name.downcase.gsub(' ', '_').gsub('é', 'e')}.png", class: "categories-icon" %>
         <div class="name-and-count">
