--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -164,6 +164,14 @@ input[type=number]::-webkit-outer-spin-button {
   min-height: calc(100vh - 70px - 243px)
 }
 
+.carousel-inner > .item > a > img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  line-height: 1;
+  margin: auto;
+}
+
 @media screen and (max-width: 1200px) {
   .page-container {
       width: 100% !important;
