--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -54,16 +54,17 @@
   border: 1px solid #d3d3d3;
   background-color: #FFF;
 
+
 }
 .navbar-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
   color: #4d4d5e !important;
-  font-size: 15px !important;
+  font-size: 17px !important;
   line-height: 22px !important;
-  padding: 10px 20px;
+  padding: 20px 35px;
   i {
-    margin-right: 5px;
+    margin-right: 15px;
   }
 }
 .navbar-dropdown-menu li > a:hover {
@@ -81,6 +82,7 @@
   z-index: -1;
   border-top: 1px solid #d3d3d3;
   border-left: 1px solid #d3d3d3;
+  transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
 
 
 }
