add tabs to campaign show

--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -75,6 +75,24 @@
         <%= render 'participation' %>
       </div>
     </div>
+    <div class="official-infos">
+      <div>
+        <ul class="tabs">
+          <li><a href="#tab-1">©<%= @product.pro.brand %></a></li>
+          <li><a href="#tab-2">Shipping</a></li>
+          <li><a href="#tab-3">Returns</a></li>
+        </ul>
+        <div id="tab-1">
+
+        </div>
+        <div id="tab-2">
+
+        </div>
+        <div id="tab-3">
+
+        </div>
+      </div>
+    </div>
 
 
   </div>
