--- a/app/assets/stylesheets/campaigns/show.scss
+++ b/app/assets/stylesheets/campaigns/show.scss
@@ -116,6 +116,10 @@
     margin-bottom: 0;
   }
 
+  .official-infos {
+    margin-top: 40px;
+  }
+
   @media all and (max-width: 1280px) {
 
   .explaination {
