--- a/app/assets/stylesheets/campaigns/show.scss
+++ b/app/assets/stylesheets/campaigns/show.scss
@@ -117,13 +117,37 @@
   }
 
   .official-infos {
-    margin-top: 40px;
+    margin-top: 70px;
+  }
+
+  .tab-title {
+    font-size: 20px;
+  }
+
+  .social-cards {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .social-card {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-right: 20px;
+    i {
+      color: $blue;
+      margin-right: 10px;
+    }
   }
 
   @media all and (max-width: 1280px) {
 
   .explaination {
     padding-right: 20px;
+  }
+
+  #tab-1, #tab-2 {
+    padding: 0 10px;
   }
 
   }
@@ -154,6 +178,8 @@
     .explaination {
       padding: 0;
     }
+
+
 
   }
 
