--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -34,7 +34,7 @@
       <div class="text-and-form">
         <div class="text-part">
           <h5>Social & bio</h5>
-          <p>Informations que pourront consulter les utilisateurs Pickalgo à propos de votre marque ou service. Ajoutez les liens vers vos pages sur les réseaux sociaux ou vous êtes présents.</p>
+          <p>Informations que pourront consulter les utilisateurs Pickalgo à propos de votre marque ou service. Ajoutez un bref historique sur votre marque ou service, ainsi que les liens vers vos pages sur les réseaux sociaux ou vous êtes présents. Les utilisateurs retrouveront ces informations lors d'une campagne dans la rubrique "A propos".</p>
         </div>
         <div class="right-part info-bloc">
         <div class="form-inputs">
