--- a/app/views/campaigns/_participation.html.erb
+++ b/app/views/campaigns/_participation.html.erb
@@ -4,7 +4,7 @@
       <h3 class=test-title>Prix libre<i class="fas fa-question-circle"></i></h3>
       <p class="price-type">A vous de choisir</p>
     </div>
-    <p class="explaination">Quel prix maximal pensez que la promo doit adopter ? Si nous pouvons obtenir un prix inférieur à celui que vous proposez, vous profitez de la promo au prix le plus bas. Si nous obtenons un prix suppérieur à celui que vous proposez, vous ne pourrez pas profiter de la promo.</p>
+    <p class="explaination">Quel prix maximal pensez-vous que la promo doit adopter ? Si nous pouvons obtenir un prix inférieur à celui que vous proposez, vous profitez de la promo au prix le plus bas. Si le prix que nous avons obtenu est suppérieur à celui que vous proposez, vous ne pourrez pas en profiter.</p>
   </div>
 <% else %>
 
