--- a/app/views/pros/my_campaigns.html.erb
+++ b/app/views/pros/my_campaigns.html.erb
@@ -13,6 +13,8 @@
               <th>Nom de la campagne</th>
               <th>Type de campagne</th>
               <th>Statut</th>
+              <th>Vues uniques</th>
+              <th>Vues totales</th>
               <th>Voir</th>
             </tr>
             <% @campaigns.each do |campaign| %>
@@ -24,6 +26,8 @@
                   <% else %>
                   <td class="closed">Clôturée</td>
                 <% end %>
+                <td><%= campaign.picks.count %></td>
+                <td><%= campaign.views %></td>
                 <td><%= link_to 'Détails', promo_path(campaign) %></td>
               </tr>
             <% end %>
