--- a/app/assets/stylesheets/campaigns/show.scss
+++ b/app/assets/stylesheets/campaigns/show.scss
@@ -140,6 +140,40 @@
     }
   }
 
+  .participation-input {
+    margin: 20px 0;
+    span {
+      margin-right: 20px;
+      margin-bottom: 20px;
+    }
+
+    input {
+      margin-right: 10px;
+      margin-top: -5px;
+      vertical-align: middle;
+    }
+
+    label {
+      margin: 0;
+    }
+  }
+
+  .yes-outcome {
+    text-align: justify;
+    display: none;
+    margin-top: 20px;
+    font-size: 15px;
+    margin-bottom: 20px;
+  }
+
+  .no-outcome {
+   text-align: justify;
+   display: none;
+   margin-top: 20px;
+   font-size: 15px;
+   margin-bottom: 20px;
+  }
+
   @media all and (max-width: 1280px) {
 
   .explaination {
