--- a/app/assets/stylesheets/campaigns/show.scss
+++ b/app/assets/stylesheets/campaigns/show.scss
@@ -187,7 +187,10 @@
   }
 
   @media screen and (max-width: 768px) {
-
+    .participation-input {
+      display: flex;
+      flex-direction: column;
+    }
 
    }
 
@@ -212,7 +215,6 @@
     .explaination {
       padding: 0;
     }
-
 
 
   }
