--- a/app/views/campaigns/_participation.html.erb
+++ b/app/views/campaigns/_participation.html.erb
@@ -6,6 +6,19 @@
     </div>
     <p class="explaination">Quel prix maximal pensez-vous que la promo doit adopter ? Si nous pouvons obtenir un prix inférieur à celui que vous proposez, vous profitez de la promo au prix le plus bas. Si le prix que nous avons obtenu est suppérieur à celui que vous proposez, vous ne pourrez pas en profiter.</p>
   </div>
+  <div class="pick-form">
+    <%= simple_form_for [@campaign, @pick], url: pick_path(@pick) do |f| %>
+      <div class="participation-input">
+        <div class="input-and-icon">
+          <%= f.input :price, label: false, placeholder: "Votre prix" %>
+          <span class="icon fas fa-euro-sign"></span>
+        </div>
+      </div>
+
+      <%= f.button :submit, "Valider", class: "btn-blue", id:"save-cta" %>
+
+    <% end %>
+  </div>
 <% else %>
 
   <div class="test-explain">
