--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,7 +10,7 @@
           <h5>Modifier votre mot de passe</h5>
           <p>Vous avez la possibilité de modifier votre mot de passe. Pour cela veuillez saisir votre mot de passe actuel, en choisir un nouveau de minimum 6 carractères, confirmez ce nouveau mot de passe puis enregistrez la modificiation.</p>
         </div>
-        <div class="form-part info-bloc">
+        <div class="right-part info-bloc">
           <div class="form-inputs">
             <div class="input-and-icon">
               <%= f.input :current_password, required: true, label: false, placeholder: 'Mot de passe actuel'%>
