--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
           <h5>Vos informations personnelles</h5>
           <p>Retrouvez et mettez à jour ici toutes vos informations personnelles.</p>
         </div>
-        <div class="form-part info-bloc">
+        <div class="right-part info-bloc">
           <div class="form-inputs">
             <div class="input-and-icon gender">
               <%= f.collection_radio_buttons :sex, [["Madame", 'Madame'] ,["Monsieur", 'Monsieur']], :first, :last %>
