--- a/app/assets/stylesheets/campaigns/promo.scss
+++ b/app/assets/stylesheets/campaigns/promo.scss
@@ -9,11 +9,11 @@
   border: 1px solid rgba(0,0,0,.0625);
   padding: 20px;
   background-color: #FFF;
-  margin-right: 20px;
+  margin-right: 1%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  flex: 0 0 20%;
+  flex: 0 0 19%;
   h3 {
     font-size: 20px;
     margin: 0;
@@ -34,11 +34,22 @@
   }
 
   .fa-poll {
-    color: #4caf50;
+    color: #673ab7;
+    font-size: 25px;
+  }
+
+  .fa-shopping-cart {
+    color: #ff9800;
     font-size: 25px;
   }
 
   .fa-eye {
+    font-size: 25px;
+    color: #2196f3;
+  }
+
+  .fa-users {
+    color: #4caf50;
     font-size: 25px;
   }
 
