--- a/app/views/campaigns/promo.html.erb
+++ b/app/views/campaigns/promo.html.erb
@@ -33,11 +33,31 @@
         <div class="stat-block">
           <div class="top-block">
             <h3>Nombre de visites</h3>
-            <span>100%</span>
+            <span><%= @campaign.views %>/<%= @campaign.views %></span>
           </div>
           <div class="bottom-block">
             <i class="far fa-eye"></i>
             <span><%= @campaign.views %></span>
+          </div>
+        </div>
+        <div class="stat-block">
+          <div class="top-block">
+            <h3>Visites uniques</h3>
+            <span><%= @campaign.picks.count %>/<%= @campaign.views %></span>
+          </div>
+          <div class="bottom-block">
+            <i class="fas fa-users"></i>
+            <span><%= @campaign.picks.count %></span>
+          </div>
+        </div>
+        <div class="stat-block">
+          <div class="top-block">
+            <h3>Panier</h3>
+            <span><%= @campaign.picks.where.not(answer: [nil, ""]).count %>/<%= @campaign.picks.count %></span>
+          </div>
+          <div class="bottom-block">
+            <i class="fas fa-shopping-cart"></i>
+            <span><%= @campaign.picks.where.not(answer: [nil, ""]).count %></span>
           </div>
         </div>
       </div>
